worked on ios issues

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -20,6 +20,7 @@ body {
 }
 .iframe {
     background-color: white;
+    width: 95%;
 }
 .ui-btn-top {
     top: 0;
@@ -44,9 +45,12 @@ body {
     overflow-y: scroll;
     max-height: 100%;
     padding-top: 2rem;
-    padding-bottom: 4rem;
+    padding-bottom: 3.5rem;
+    z-index: 999;
 }
 #infowindow {
+    overflow-y: scroll;
+    max-height:100%;
     width: 100%;
     height: 100%;
 	padding-bottom: 2rem;
@@ -57,25 +61,12 @@ body {
     top: 45px;
     left: 0px;
     background-color: #2a2826;
-    z-index: 999;
-    text-align: center;
-}
-#buildinglistinfo {
-    width: 100%;
-    height: 100%;
-	padding-bottom: 2rem;
-	padding-left: 1rem;
-	padding-right: 1rem;
-    visibility: hidden;
-    position: absolute;
-    top: 45px;
-    left: 0px;
-    background-color: #2a2826;
-    z-index: 999;
+    z-index: 995;
     text-align: center;
 }
 .main-section {
     height: 100%;
+    padding-bottom: 2rem;
 }
 .inner-wrap {
     height: 100%;
